--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
-# 容器 配置
 server:
-  port: 8443        # https 端口号，正式 443；测试 8443
-  sslPort: 8080     # http 端口号，正式 80；测试 8080
+  address: 0.0.0.0
+  port: 8443
+  sslPort: 8080
   ssl:
     key-store: classpath:any.jks
     key-password: 214174460510953
@@ -9,24 +9,25 @@ server:
     worker-threads: 20
     buffer-size: 512
     io-threads: 2
-
-# 数据库 及 Redis 配置    
 spring:
   redis:
-    host: localhost
+    host:
     password:
-#  使用 MySQL 不用做任何修改
   datasource:
-    url: jdbc:mysql://localhost:3306/any_db?useUnicode=true&characterEncoding=UTF-8
-    driver-class-name: org.mariadb.jdbc.Driver
-    username:
+    url: jdbc:mysql://193.112.46.15:3306/any_db?useUnicode=true&characterEncoding=UTF-8
+    username: root
     password:
     sql-script-encoding: utf-8
     hikari:
       max-lifetime: 1765000
       maximum-pool-size: 10
-
-# Mybatis 配置
+    driver-class-name: org.mariadb.jdbc.Driver
 mybatis:
   configuration:
-    map-underscore-to-camel-case: true    # 驼峰命名转换
+    map-underscore-to-camel-case: true
+
+logging:
+  config: classpath:logback-spring.xml
+  path: /logs
+  level:
+    cn.ictgu: debug
